recursion.lessons.recursion.square.FourSquare.scala.error
FourSquare:14: error: not found: value square
	square(100,90)
        ^