recursion.lessons.recursion.square.FourSquare.scala.code
override def run() {
	def square(p:Double,a:Double)={
		for (i<- 1 to 4) {
			avance(p);
			droite(a);
		}
		droite(a);
		avance(p);
		droite(a);
	}
}
for (i<-1 to 4) {
	square(100,90)
}
